--- a/page.html
+++ b/page.html
@@ -19,6 +19,7 @@
     </head>
     <body>
         <h1 class="text-center">Page World</h1>
+        <h2 class="text-center">Page World for version 1</h2>
 
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
