--- a/page.html
+++ b/page.html
@@ -20,6 +20,7 @@
     <body>
         <h1 class="text-center">Page World</h1>
         <h2 class="text-center">Page World for version 1</h2>
+        <h2 class="text-center">Page World for version 2</h2>
 
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
